Update rf script

--- a/model_training_rf.ipynb
+++ b/model_training_rf.ipynb
@@ -1031,37 +1031,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "pred_probs = clf.predict_proba(X_test)\n",
+    "\n",
+    "pred_labels = clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.49588159, 0.50411841],\n",
-       "       [0.48857121, 0.51142879],\n",
-       "       [0.5299122 , 0.4700878 ],\n",
-       "       ...,\n",
-       "       [0.57655261, 0.42344739],\n",
-       "       [0.526972  , 0.473028  ],\n",
-       "       [0.51701155, 0.48298845]])"
+       "array([[1475,  886],\n",
+       "       [  73,   67]], dtype=int64)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pred_probs = clf.predict_proba(X_test)\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "\n",
-    "pred_probs"
+    "confusion_matrix(y_test, pred_labels, labels = [0, 1]) # ~62% accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1076,7 @@
        "0.6028196284867188"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
